# skein

./: .gitignore  .prettierignore  LICENSE  README.md  design.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts
.github/workflows/: build.yml  test.yml
design/mockups/: HANDOFF-README.md  Skein Mockups.html  design-chat-transcript.md  skein-app.jsx  skein-canvas.jsx
examples/: README.md
examples/vault/: Skein — naming.md  Walk, Sat morning.md
examples/vault/Daily/: 2026-04-21.md  2026-04-22.md
examples/vault/Garden/: Lemon tree.md
examples/vault/Project Ideas/: Marginalia mode.md
examples/vault/Reading Notes/: The Peregrine.md  Tinker Creek.md
examples/vault/Recipes/: Brown butter pasta.md
scripts/: smoke.sh
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: archive.rs  attachments.rs  autotag.rs  books.rs  chat.rs  chunker.rs  commands.rs  daily.rs  embedder.rs  git_sync.rs  index.rs  lib.rs  main.rs  pages.rs  secrets.rs  settings.rs  state.rs  vault.rs  watcher.rs
src-tauri/tests/: index_integration.rs  vault_integration.rs
src/lib/skein/: DevControls.svelte  SkeinWindow.svelte  VaultWindow.svelte  chat.svelte.ts  data.ts  embedder.svelte.ts  focusTrap.ts  frontmatter.ts  searchUi.svelte.ts  settings.ts  settingsUi.svelte.ts  spineHash.ts  styles.css  tabs.svelte.ts  titles.svelte.ts  tweaks.svelte.ts  vault.svelte.ts  vault.ts
src/lib/skein/components/: Bookshelf.svelte  ChatMessages.svelte  CommandPalette.svelte  ContextMenu.svelte  Desk.svelte  DragOverlay.svelte  Tabs.svelte  (+18 more)
src/routes/: +page.svelte
tests/e2e/: fixtures.ts
tests/e2e/mocks/: tauri-handlers.ts  tauri-mock.ts
tests/e2e/specs/: bookshelf.spec.ts  command-palette.spec.ts  drag-and-drop.spec.ts  page-crud.spec.ts  settings-modal.spec.ts  smoke.spec.ts  titlebar-menus.spec.ts  visual.spec.ts
tests/unit/: bookOf.test.ts  frontmatter.test.ts  spineHash.test.ts
(+4 files in other folders)
