[package]
name = "skein"
version = "0.0.0"
description = "Skein — a local note-taking app"
authors = ["Skein contributors"]
edition = "2021"
license = "MIT"

[lib]
name = "skein_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
