[package]
name = "skein"
version = "0.0.0"
description = "Skein — a local note-taking app"
authors = ["Skein contributors"]
edition = "2021"
license = "MIT"

[lib]
name = "skein_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify-debouncer-full = "0.5"
gray_matter = { version = "0.2", default-features = false, features = ["yaml"] }
walkdir = "2"
anyhow = "1"
parking_lot = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
fastembed = "4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
keyring = { version = "3", features = ["sync-secret-service", "vendored", "windows-native", "apple-native"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
serde_yml = "0.0.12"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
